--- a/ASP-MyBiz/Areas/Manage/Views/Profession/Index.cshtml
+++ b/ASP-MyBiz/Areas/Manage/Views/Profession/Index.cshtml
@@ -10,11 +10,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10 mx-auto">
+            <a asp-action="create" class="btn btn-primary">Create</a>
+
             <table class="table">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
+                        <th scope="col">Actions</th>
 
                     </tr>
                 </thead>
@@ -26,7 +29,11 @@
                         <tr>
                             <th scope="row">@count</th>
                             <td>@profs.Name</td>
-                           
+                            <td>
+                                <a asp-action="delete" asp-route-id="@profs.ID" class="btn btn-danger">Delete</a>
+                                <a asp-action="edit" asp-route-id="@profs.ID" class="btn btn-warning">Edit</a>
+
+                            </td>
                         </tr>
                     }
 
